# test_spi_cli

./: Cargo.toml  build_send
.cargo/: config
src/: main.rs
