[package]
name = "test_spi_cli"
version = "0.1.0"
authors = ["Justace Clutter <justacec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "0.12"
byte = "0.2"
