[package]
name = "test_spi_cli"
version = "0.1.0"
authors = ["Justace Clutter <justacec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
linux-embedded-hal = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "0.12"
byte = "0.2"
tui = "0.9"
termion = { version = "1.5", optional = true }
rand = "0.7"
chrono = "0.4"
bbqueue = "0.4"
once_cell = "1"
hex = "0.4"
spmc = "0.3"